<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/lv_gamepad"
    android:background="@drawable/bg_home_root"
    android:fitsSystemWindows="true"
    tools:ignore="MissingDefaultResource">

    <RelativeLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_alignParentStart="true"
            android:id="@+id/iv_back"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_home_circle_button"
            android:contentDescription="@string/home_action_back"
            android:focusable="true"
            android:layout_marginEnd="10dp"
            android:layout_width="@dimen/home_header_action_size"
            android:layout_height="@dimen/home_header_action_size"
            android:nextFocusRight="@id/iv_coffee"
            android:padding="11dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_axi_back" />

        <ImageButton
            android:layout_alignParentEnd="true"
            android:id="@+id/iv_coffee"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_home_circle_button"
            android:contentDescription="@string/home_action_support"
            android:src="@drawable/ic_axi_coffee"
            android:focusable="true"
            android:layout_marginEnd="10dp"
            android:layout_width="@dimen/home_header_action_size"
            android:layout_height="@dimen/home_header_action_size"
            android:nextFocusLeft="@id/iv_back"
            android:padding="10dp"
            android:scaleType="centerInside" />

    </RelativeLayout>


    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:src="@mipmap/ic_app_axi"
                    android:layout_width="75dp"
                    android:layout_height="75dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_label"
                    android:id="@+id/tv_info"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="随时随地，畅连你的电脑！"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="版本号：1.0.0"
                    android:textStyle="bold"
                    android:id="@+id/tv_version"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"/>

                <LinearLayout
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:onClick="onClick"
                        android:id="@+id/iv_help"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_help"
                        android:textStyle="bold"
                        android:padding="4dp"
                        android:visibility="gone"
                        android:textColor="@android:color/white"
                        android:textSize="9sp"/>

                    <TextView
                        android:onClick="onClick"
                        android:id="@+id/iv_res"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_get_res"
                        android:textStyle="bold"
                        android:layout_marginStart="4dp"
                        android:padding="4dp"
                        android:textColor="@android:color/white"
                        android:textSize="9sp"/>

                    <TextView
                        android:onClick="onClick"
                        android:id="@+id/iv_get"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_update_tx"
                        android:textStyle="bold"
                        android:layout_marginStart="4dp"
                        android:padding="4dp"
                        android:textColor="@android:color/white"
                        android:textSize="9sp"/>

                    <TextView
                        android:id="@+id/tv_version_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:onClick="onClick"
                        android:padding="4dp"
                        android:text="@string/about_version_history"
                        android:textColor="@android:color/white"
                        android:textSize="9sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_credits"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/axi_gameplay_gamepad_item_bg"
                android:orientation="horizontal"
                android:padding="12dp"
                android:onClick="onClick"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_thanks"
                    android:layout_width="24dp"
                    android:layout_height="24dp"/>

                <LinearLayout
                    android:layout_marginLeft="12dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="鸣谢"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:textSize="13sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="感谢每一位支持与陪伴的朋友"
                        android:textColor="@android:color/white"
                        android:textSize="10sp"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_sunshine"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/axi_gameplay_gamepad_item_bg"
                android:orientation="horizontal"
                android:padding="12dp"
                android:onClick="onClick"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/ic_sunshine"
                    android:layout_width="24dp"
                    android:layout_height="24dp"/>

                <LinearLayout
                    android:layout_marginLeft="12dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sunshine·阿西西"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:textSize="13sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="搭配月光支持虚拟显示器、麦克风、DS5虚拟手柄等功能"
                        android:textColor="@android:color/white"
                        android:textSize="10sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_starcore"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/axi_gameplay_gamepad_item_bg"
                android:orientation="horizontal"
                android:padding="12dp"
                android:onClick="onClick"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/ic_starcore"
                    android:layout_width="24dp"
                    android:layout_height="24dp"/>

                <LinearLayout
                    android:layout_marginLeft="12dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="StarCore 星核"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:textSize="13sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mac被控端应用，搭配月光实现macOS端串流。"
                        android:textColor="@android:color/white"
                        android:textSize="10sp"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lv_other_app"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/axi_gameplay_gamepad_item_bg"
                android:orientation="horizontal"
                android:padding="12dp"
                android:onClick="onClick"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_axi_app_more"
                    android:layout_width="24dp"
                    android:layout_height="24dp"/>

                <LinearLayout
                    android:layout_marginLeft="12dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="更多应用"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:textSize="13sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="前往开发者个人空间，发现更多应用与作品"
                        android:textColor="@android:color/white"
                        android:textSize="10sp"/>

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="在这里找到开发者"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:textSize="9sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:onClick="onClick"
                    android:id="@+id/iv_bili"
                    android:src="@mipmap/axi_gameplay_icon_bili"
                    android:layout_width="25dp"
                    android:layout_height="25dp"/>

                <ImageView
                    android:onClick="onClick"
                    android:id="@+id/iv_xhs"
                    android:src="@mipmap/axi_gameplay_icon_xhs"
                    android:layout_width="25dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_height="25dp"/>

                <ImageView
                    android:onClick="onClick"
                    android:id="@+id/iv_douyin"
                    android:layout_marginRight="15dp"
                    android:src="@mipmap/axi_gameplay_icon_douyin"
                    android:layout_width="26dp"
                    android:layout_height="26dp"/>

                <ImageView
                    android:onClick="onClick"
                    android:id="@+id/iv_github"
                    android:src="@drawable/ic_github_axi"
                    android:layout_width="24dp"
                    android:layout_height="24dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</LinearLayout>
